# Simulador_web2

./: README.md
Simulador_web2/: CMakeLists.txt  Simulador_web2.cpp  Simulador_web2.h
Simulador_web2/include/: CitaMedica.hpp  Medico.hpp  Paciente.hpp  SistemaHospital.hpp
Simulador_web2/src/: CitaMedica.cpp  Medico.cpp  Paciente.cpp  SistemaHospital.cpp  main.cpp
